# annotui

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  slophammer.yml
.github/workflows/: ci.yml  publish.yml
docs/: 2026-07-10-architecture.md  2026-07-10-built-in-13-messages.md  2026-07-10-data-model-review.md  2026-07-10-output-formats.md
scripts/: ci-local.sh  e2e-tmux.sh
src/: app.rs  cli.rs  domain.rs  input.rs  lib.rs  main.rs  output.rs  render.rs  runner.rs  source.rs  storage.rs  terminal.rs
tests/: architecture.rs
