[package]
name = "annotui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Mouse-first terminal UI for commenting on files and piped text."
license = "MIT"
repository = "https://github.com/dutifuldev/annotui"
homepage = "https://github.com/dutifuldev/annotui"
documentation = "https://docs.rs/annotui"
readme = "README.md"
keywords = ["terminal", "tui", "review", "comments", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["use-dev-tty"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
ratatui-textarea = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
same-file = "1"
tempfile = "3"
thiserror = "2"
unicode-segmentation = "1"
unicode-normalization = "0.1"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
